# rust-tmpl

./: Cargo.toml  cargo-generate.toml  flake.nix
